# scancelue

./: .gitignore  README.md  pyproject.toml
app/: main.py
templates/: backtest_dashboard.html  dashboard.html
tests/: test_engine.py
