[project]
name = "sol-openclaw-signal"
version = "0.1.0"
description = "SOL new token monitoring with strategy switching and signal webhooks"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
